# doiggie-repositories

./: .pre-commit-config.yaml  LICENSE.md  README.md  README.md.j2  generate.py  pyproject.toml
.github/workflows/: pypi.yml  render.yaml
