[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm>=7",
]
build-backend = "setuptools.build_meta"

[project]
name = "pooch_repositories"
description = "Meta package to install all pooch-doi data repository implementations"
maintainers = [
    { name = "Dominic Kempf", email = "dominic.kempf@iwr.uni-heidelberg.de" },
]
dynamic = ["version"]
requires-python = ">=3.10"
license = { text = "BSD-2" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "pooch-doi @ git+https://github.com/ssciwr/pooch-doi.git@main",
    "pooch-dataverse @ git+https://github.com/ssciwr/pooch-dataverse.git@main",
    "pooch-figshare @ git+https://github.com/ssciwr/pooch-figshare.git@main",
    "pooch-invenio @ git+https://github.com/ssciwr/pooch-invenio.git@main",
]

[tool.setuptools]
py-modules = []

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
