[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm>=7",
]
build-backend = "setuptools.build_meta"

[project]
name = "doiggie-repositories"
description = "Meta package to install all doiggie data repository implementations"
maintainers = [
    { name = "Dominic Kempf", email = "dominic.kempf@iwr.uni-heidelberg.de" },
]
dynamic = ["version"]
requires-python = ">=3.10"
license = { text = "BSD-2" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "doiggie",
    "doiggie-dataverse",
    "doiggie-figshare",
    "doiggie-invenio",
]

[tool.setuptools]
py-modules = []

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
